@@ -86,7 +86,7 @@ DefaultDBItem	defaultDBItems[] = {
   { "trackMarkCulling",		"3",			true,	StateDatabase::ReadWrite,	NULL },
   { "scrollPages",		"20",			true,	StateDatabase::ReadWrite,	NULL },
   { "remoteSounds",		"1",			true,	StateDatabase::ReadWrite,	NULL },
-  { "leadingShotLine",		"0",			true,	StateDatabase::ReadWrite,	NULL },
+  { "radarShotLineType",	"0",			true,	StateDatabase::ReadWrite,	NULL },
   { "saveIdentity",		"2",			true,	StateDatabase::ReadWrite,	NULL },
   { "showCollisionGrid",	"0",			true,	StateDatabase::ReadWrite,	NULL },
   { "showCullingGrid",		"0",			true,	StateDatabase::ReadWrite,	NULL },
