@@ -31,7 +31,7 @@ BZDBCache::Bool  BZDBCache::lighting;
 BZDBCache::Bool  BZDBCache::smooth;
 BZDBCache::Bool  BZDBCache::colorful;
 BZDBCache::Bool  BZDBCache::animatedTreads;
-BZDBCache::Bool  BZDBCache::leadingShotLine;
+BZDBCache::Int   BZDBCache::radarShotLineType;
 BZDBCache::Int   BZDBCache::radarStyle;
 BZDBCache::Float BZDBCache::radarTankPixels;
 BZDBCache::Float BZDBCache::linedRadarShots;
@@ -110,7 +110,7 @@ void BZDBCache::init()
   BZDB.addCallback("colorful", clientCallback, NULL);
   BZDB.addCallback("animatedTreads", clientCallback, NULL);
   BZDB.addCallback("shotLength", clientCallback, NULL);
-  BZDB.addCallback("leadingShotLine", clientCallback, NULL);
+  BZDB.addCallback("radarShotLineType", clientCallback, NULL);
   BZDB.addCallback("flagChunks", clientCallback, NULL);
   BZDB.addCallback("pulseRate", clientCallback, NULL);
   BZDB.addCallback("pulseDepth", clientCallback, NULL);
@@ -196,8 +196,8 @@ void BZDBCache::clientCallback(const std::string& name, void *)
     animatedTreads = BZDB.isTrue("animatedTreads");
   else if (name == "shotLength")
     shotLength = BZDB.eval("shotLength");
-  else if (name == "leadingShotLine")
-    leadingShotLine = BZDB.isTrue("leadingShotLine");
+  else if (name == "radarShotLineType")
+    radarShotLineType = BZDB.eval("radarShotLineType");
   else if (name == "flagChunks")
     flagChunks = BZDB.evalInt("flagChunks");
   else if (name == "pulseRate")
